// Vitest Snapshot v1

exports[`<Header/> > should render authenticated header 1`] = `
<div>
  <div>
    <nav
      class="navbar bg-base-100 mb-10 sm:mb-16"
    >
      <div
        class="w-full md:w-4/5 xl:w-3/5 md:mx-auto"
      >
        <div
          class="flex-1 text-primary"
        >
          <div
            class="btn btn-ghost normal-case text-xl"
            to="/"
          >
            <img
              alt="logo"
              src="/src/components/Header/logo.webp"
            />
          </div>
        </div>
        <div
          class="flex-none gap-2"
        >
          <ul
            class="menu menu-horizontal p-0"
          >
            <li>
              <div
                data-testid="accountLink"
                to="/account"
              >
                My Account
              </div>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`<Header/> > should render unauthenticated header 1`] = `
<div>
  <div>
    <nav
      class="navbar bg-base-100 mb-10 sm:mb-16"
    >
      <div
        class="w-full md:w-4/5 xl:w-3/5 md:mx-auto"
      >
        <div
          class="flex-1 text-primary"
        >
          <div
            class="btn btn-ghost normal-case text-xl"
            to="/"
          >
            <img
              alt="logo"
              src="/src/components/Header/logo.webp"
            />
          </div>
        </div>
        <div
          class="flex-none gap-2"
        >
          <ul
            class="menu menu-horizontal p-0"
          >
            <li>
              <div
                class="relative flex h-11 w-full items-center justify-center px-6 before:absolute before:inset-0 before:rounded-full before:bg-primary before:transition before:duration-300 hover:before:scale-105 active:duration-75 active:before:scale-95 sm:w-max"
                data-testid="loginLink"
                to="/signin"
              >
                <span
                  class="relative text-base font-semibold text-gray-700"
                >
                  Get started
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </nav>
  </div>
</div>
`;
